--- a/resources/css/output/styles.css
+++ b/resources/css/output/styles.css
@@ -291,15 +291,15 @@ img {
 .swiper .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: transparent;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 .swiper .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -1036,19 +1036,7 @@ img {
   }
 }
 .sec-cartier4 .swiper-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin-bottom: 5%;
-}
-.sec-cartier4 .swiper-wrapper .sec-g__img1 {
-  width: 30%;
-}
-.sec-cartier4 .swiper-wrapper .sec-g__img2 {
-  width: 45%;
-}
-.sec-cartier4 .swiper-wrapper .sec-g__img3 {
-  width: 35%;
 }
 
 #footer {
