--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -37,7 +37,7 @@
     @include mobileMore {
         font-size: 28vw;
         margin-top: 105%;
-        margin-bottom: 50%;
+        margin-bottom: 55%;
     }
     @include tabletMore {
         font-size: 15vw;
@@ -48,8 +48,12 @@
 
 .sec-cartier {
     overflow: visible;
+    position: relative;
     .sec-g__tit {
-        position: relative;
+        position: absolute;
+        z-index: 1;
+        top: 100;
+        left: 20;
         will-change: transform;
         font-size: 15vw;
         font-weight: 400;
@@ -80,8 +84,10 @@
             will-change: transform;
             border-radius: 18px;
             margin-bottom: 10%;
+            height: 25vh;
             object-fit: cover;
             @include mobileMore {
+                height: 45vh;
                 margin-bottom: 5%;
             }
             @include tabletMore {
@@ -94,7 +100,7 @@
         .sec-g__desc {
             font-weight: normal;
             font-size: 4vw;
-            // opacity: 0.7;
+
             @include tabletMore {
                 font-size: 2.6875rem;
             }
